--- a/views/links/list.hbs
+++ b/views/links/list.hbs
@@ -16,8 +16,15 @@
                             {{timeago created_at}}
                         </p>
                         <a href="/links/delete/{{{id}}}" class="btn btn-danger">Delete</a>
-                        <a class="btn btn-secondary">Edit</a>
+                        <a href="/links/edit/{{id}}" class="btn btn-secondary">Edit</a>
                     </div>
+                </div>
+            </div>
+        {{else}}
+            <div class="col-md-4 mx-auto">
+                <div class="card card-body text-center">
+                    <p>There are not links saved yet</p>
+                    <a href="/links/add">Create one</a>
                 </div>
             </div>
         {{/each}}
