--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -24,6 +24,13 @@
                 <li class="nav-item">
                     <a href="/logout" class="nav-link">Logout</a>
                 </li>
+            {{else}}
+                <li class="nav-item">
+                    <a href="/signin" class="nav-link">Signin</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/signup" class="nav-link">Signup</a>
+                </li>
             {{/if}}
             
         </ul>
